--- a/style.css
+++ b/style.css
@@ -53,8 +53,7 @@ h1 {
   text-align: center;
   }
   body{
-    font-family: 'Edu TAS Beginner', cursive;
-
+    font-family: 'Montserrat Alternates', sans-serif;
   }
 
 h2 {
