--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1 {
   text-align: center;
   }
   body{
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Unbounded', sans-serif;
   }
 
 h2 {
